@@ -61,10 +61,6 @@ class Sys::Socket {
   
   native static method getsockopt : int ($sockfd : int, $level : int, $optname : int, $optval : mutable string, $optlen_ref : int*);
   
-  native static method getaddrinfo_raw : int ($node : string, $service : string,
-                $hints : Sys::Socket::Addrinfo,
-                $res : Sys::Socket::AddrinfoLinkedList[]);
-  
   native static method getaddrinfo : int ($node : string, $service : string,
                 $hints : Sys::Socket::Addrinfo,
                 $res : Sys::Socket::AddrinfoLinkedList[]);
